# EmbedClaw-esp32s3

./: README.md
components/embed_claw/channel/: ec_channel_feishu.c  ec_channel_ws.c
components/embed_claw/core/: ec_agent.c  ec_channel.c  ec_session.c
components/embed_claw/llm/: ec_llm.c  ec_llm.h
components/embed_claw/test/: CMakeLists.txt  README.md  ec_test_config.h
components/embed_claw/test/tools/: test_tool_files.c
components/embed_claw/tools/: tools_cron.c  tools_web_search.c
